--- a/style.css
+++ b/style.css
@@ -1,6 +1,54 @@
+:root{
+    --menu-list-width: 30rem;
+}
+
 body{
-    background-color: #1f1f1f;
+    background-color: #141414;
     margin: 0;
+    font-family: sans-serif;
+    color: whitesmoke;
+}
+
+#decoration-circle{
+    height: 10rem;
+    width: 10rem;
+    border-radius: 50%;
+    border: 2px solid #FA2FBD;
+    position: absolute;
+    top: 20%;
+    left: 60%;
+}
+
+#decoration-square{
+    height: 7rem;
+    width: 7rem;
+    border: 2px solid #FFF67D;
+    position: absolute;
+    top: 55%;
+    left: 10%;
+    transform: rotate(25deg);
+}
+
+#decoration-triangle{
+    width: 0; 
+    height: 0; 
+    border-left: 5rem solid transparent;
+    border-right: 5rem solid transparent; 
+    border-bottom: 5rem solid #FFF67D;
+    position: absolute;
+    top: 30%;
+    left: 30%;
+    transform: rotate(-25deg);
+}
+
+#decoration-triangle:after{
+    content: '';
+    border-style:solid;
+    border-width: 0 4.6rem 4.6rem;
+    border-color: transparent transparent #141414;
+    position: absolute;
+    top: 3px;
+    left: -73px;
 }
 
 #menu{
@@ -17,6 +65,11 @@ body{
     /* display: none; */
 }
 
+#hamburger{
+    position: sticky;
+    z-index: 2000;
+}
+
 #hamburger > input{
     display: none;
 }
@@ -29,6 +82,21 @@ body{
     padding: 2rem;
     margin: 0;
     cursor: pointer;
+    z-index: 2000;
+}
+
+#menu-list{
+    display: flex;
+    /* background-color: red; */
+    height: 90vh;
+    width:0;
+    position: absolute;
+    right:0;
+    top:5rem;
+    padding: 0;
+    overflow: hidden;
+    transition: width 500ms;
+    z-index: 2000;
 }
 
 #menu > span{
@@ -37,3 +105,31 @@ body{
     width: 100%;
     z-index: 1000;
 }
+
+#menu-list > ul{
+    list-style-type:none;
+    margin-bottom : 2rem;
+}
+
+#list-text{
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: 4rem;
+    line-height: 10rem;
+}
+
+#menu-opacity{
+    position: absolute;
+    height: 100vh;
+    width: 0;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 50%);
+}
+
+#intro-text{
+    /* background-color: red; */
+    position: absolute;
+    top: 40vh;
+    left: 15vh;
+}
+
