--- a/style.css
+++ b/style.css
@@ -54,24 +54,27 @@ body{
 }
 
 
-/* #menu{
+#menu{
     display: flex;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    height:5rem;
-    width:5rem;
-    cursor: pointer;
-    border: 3px solid #fff;
+    position: absolute;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 0.5rem;
+    height:2rem;
+    width:2.5rem;
+    top:1rem;
+    right: 1rem;
+    /* background-color: red; */
+    /* display: none; */
     transition: all .5s ease-in-out;
-} */
+}
 
-/* #hamburger{
+#hamburger{
     position: sticky;
     z-index: 2000;
-} */
+}
 
-/* #hamburger > input{
+#hamburger > input{
     display: none;
 }
 
@@ -84,85 +87,31 @@ body{
     margin: 0;
     cursor: pointer;
     z-index: 2000;
-} */
+}
 
-.menu-btn {
-    position: relative;
+#menu-list{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80px;
-    height: 80px;
-    cursor: pointer;
-    transition: all .5s ease-in-out;
-    /* border: 3px solid #fff; */
-  }
-  .menu-btn__burger {
-    width: 50px;
-    height: 6px;
-    background: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(255,101,47,.2);
-    transition: all .5s ease-in-out;
-  }
-  .menu-btn__burger::before,
-  .menu-btn__burger::after {
-    content: '';
+    /* background-color: red; */
+    height: 90vh;
+    width:0;
     position: absolute;
-    width: 50px;
-    height: 6px;
-    background: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(255,101,47,.2);
-    transition: all .5s ease-in-out;
-  }
-  .menu-btn__burger::before {
-    transform: translateY(-16px);
-  }
-  .menu-btn__burger::after {
-    transform: translateY(16px);
-  }
-  /* ANIMATION */
-  .menu-btn.open .menu-btn__burger {
-    transform: translateX(-50px);
-    background: transparent;
-    box-shadow: none;
-  }
-  .menu-btn.open .menu-btn__burger::before {
-    transform: rotate(45deg) translate(35px, -35px);
-  }
-  .menu-btn.open .menu-btn__burger::after {
-    transform: rotate(-45deg) translate(35px, 35px);
-  }
+    right:0;
+    top:5rem;
+    padding: 0;
+    overflow: hidden;
+    transition: width 500ms;
+    z-index: 2000;
+}
 
-/* #line{
+#menu > span{
     background-color: whitesmoke;
-    height: 6px;
-    width: 50px;
+    height: 2px;
+    width: 100%;
     z-index: 1000;
     transition: all .5s ease-in-out;
-    border-radius: 5px;
 }
 
- #line::before,
- #line::after{
-    background-color: whitesmoke;
-    height: 6px;
-    width: 50px;
-    z-index: 1000;
-    transition: all .5s ease-in-out;
-    border-radius: 5px;
-}
-
-#line::before{
-    transform: translateY(-16px);
-}
-
-#line::after{
-    transform: translateY(16px);
-} */
-
-/* #menu-list > ul{
+#menu-list > ul{
     list-style-type:none;
     margin-bottom : 2rem;
 }
@@ -190,7 +139,7 @@ body{
     width: 0;
     z-index: 100;
     background-color: rgba(0, 0, 0, 50%);
-} */
+}
 
 #intro-text{
     /* background-color: red; */
