--- a/style.css
+++ b/style.css
@@ -23,16 +23,7 @@ header{
     /* background-color: red; */
 }
 
-#om-mig{
-    height: 50vh;
-    /* background-color: blue; */
-    position: relative;
-    left: 15vh;
-    right: 15vh;
-    max-width: 40vh;
-}
-
-#utbildning{
+#om-mig, #utbildning, #portfolio, #erfarenhet, #kontakta-mig{
     height: 50vh;
     /* background-color: blue; */
     position: relative;
