--- a/style.css
+++ b/style.css
@@ -2,15 +2,56 @@ html{
     scroll-behavior: smooth;
 }
 
-@keyframes enter-sight{
-    from{opacity: 0; transform: scale(0, .025); }
-
-    to{opacity: 100%; transform: scale(1, .025); }
+body{
+    background-color: #141414;
+    margin: 0;
+    font-family: sans-serif;
+    color: whitesmoke;
+    overflow-x: hidden;
 }
 
 :root{
     --menu-list-width: 30rem;
 }
+
+.fade-in {
+    opacity: 0;
+    transition: opacity 250ms ease-in;
+  }
+  
+  .fade-in.appear {
+    opacity: 1;
+  }
+
+  .from-left {
+    transform: translateX(-50%);
+    transform: translateX(-50%);
+  }
+  
+  .from-right {
+    transform: translateX(50%);
+    transform: translateX(50%);
+  }
+  
+  .from-left,
+  .from-right {
+    transition: opacity 250ms ease-in, -webkit-transform 400ms ease-in;
+    transition: opacity 250ms ease-in, transform 400ms ease-in;
+    transition: opacity 250ms ease-in, transform 400ms ease-in,
+      transform 400ms ease-in;
+    opacity: 0;
+  }
+  
+  .from-left.appear,
+  .from-right.appear {
+    transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+
+
+
 
 #code-font{
     font-family: 'Inconsolata', monospace;
@@ -31,25 +72,16 @@ header{
 }
 
 #om-mig, #utbildning, #portfolio, #erfarenhet, #kontakta-mig{
-    height: 70vh;
+    height: auto;
     /* background-color: blue; */
     position: relative;
     left: 15vh;
     right: 15vh;
     max-width: 100rem;
-    /* border: 2px solid red; */
-    margin-bottom: 5rem;
-    animation-name: enter-sight;
-    animation-duration: 1s;
+    overflow: hidden;
+    border: 2px solid red;
+    margin-bottom: 6rem;
 }
-
-body{
-    background-color: #141414;
-    margin: 0;
-    font-family: sans-serif;
-    color: whitesmoke;
-}
-
 
 
 #decoration-circle{
@@ -139,6 +171,30 @@ body{
     content: '';
     position: absolute;
     background: #00C8F0;
+    top: 60%;
+    left: -60%;
+    width: 100%;
+    height: 100%;
+
+    transform: perspective(5rem) rotateX(65deg) rotateY(35deg) scale(1, 0.75);
+    filter: blur(1.5rem);
+}
+
+#decoration-square3{
+    height: 7rem;
+    width: 7rem;
+    border: 2px solid #005f0d;
+    position: relative;
+    margin-top: 5%;
+    margin-left: 70%;
+    transform: rotate(-35deg);
+    box-shadow: 2px 5px 20px #005f0d;
+}
+
+#decoration-square3::before{
+    content: '';
+    position: absolute;
+    background: #005f0d;
     top: 60%;
     left: -60%;
     width: 100%;
@@ -243,15 +299,78 @@ body{
     right: 15vh;
 }
 
-/* #line1{
-    transform: translateX(-50px);
-    background: transparent;
+#form{
+    height: 5rem;
 }
 
-#line2{
-    transform: rotate(45deg) translate(5px, 5px);
+form{
+    background: #292929;
+    height: 20rem;
+    position: relative;
 }
 
-#line3{
-    transform: rotate(-45deg) translate(10px, 10px);
-} */
+input{
+    padding: 1rem;
+    background: none;
+    border: none;
+    outline: none;
+    color: whitesmoke;
+    font-size:large;
+    border-bottom: 2px solid grey;
+}
+
+input:focus{
+    border-bottom: 2px solid white;
+}
+
+#email > input{
+    padding: 15rem;
+}
+
+#för-efternamn-email{
+    /* background: red; */
+    height: 5rem;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#meddelande{
+    height:10rem;
+    position: absolute;
+    left: 10rem;
+    bottom: 0;
+    /* background: blue; */
+}
+
+#meddelande-input{
+    background: none;
+    border: none;
+    outline: none;
+    color: whitesmoke;
+    font-size:large;
+    border-bottom: 2px solid grey;
+    resize: none;
+    font-family: sans-serif;
+}
+
+#meddelande-input:focus{
+    border-bottom: 2px solid white;
+}
+
+#button{
+    position: absolute;
+    right:10rem;
+    bottom:3rem;
+}
+
+#kontakt-h2{
+    display: none;
+}
+
+#submitted{
+    /* background: red;*/
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
